tests/baselines/reference/parserConstructorAmbiguity3.errors.txt
parserConstructorAmbiguity3.ts(1,10): error TS2304: Cannot find name 'A'.
parserConstructorAmbiguity3.ts(1,10): error TS2558: Expected 0 type arguments, but got 1.


==== parserConstructorAmbiguity3.ts (2 errors) ====
    new Date<A>
             ~
!!! error TS2304: Cannot find name 'A'.
             ~
!!! error TS2558: Expected 0 type arguments, but got 1.